--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,8 @@
   }
   
   .custom__button {
-    background-color: var(--background);
-      color: var(--primary);
+    background-color: var(--primary);
+      color: var(--text);
       font-family: var(--font-base);
       font-weight: 700;
       letter-spacing: 0.04em;
@@ -69,7 +69,7 @@
   
   .p__cormorant {
     font-family: var(--font-base);
-    color: var(--text);
+    color: var(--accent);
     font-weight: 700;
     letter-spacing: 0.04em;
     text-transform: capitalize;
