--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -13,7 +13,7 @@
 
 }
 .app__navbar-logo img{
-    width: 130px;
+    width: 100px;
     margin-right: 1rem;
 }
 .app__navbar-links{
@@ -87,7 +87,7 @@
     @media screen and (max-width:2000px){
 
         .app__navbar-logo img{
-            width: 180px;
+            width: 130px;
         }
       }
     
@@ -97,6 +97,9 @@
         }
         .app__navbar-smallscreen{
             display: flex;
+        }
+        .app__navbar-logo img{
+            width: 90px;
         }
         
     }
@@ -109,7 +112,7 @@
             display: none;
         }
         .app__navbar-logo img{
-            width: 90px;       
+            width: 70px;       
         }
 
     }
