--- a/src/components/MenuItem/MenuItem.css
+++ b/src/components/MenuItem/MenuItem.css
@@ -1,6 +1,7 @@
 .app__menuitem {
     width: 100%;
     margin: 1rem 0;
+
     display: flex;
     flex-direction: column;
 }
@@ -11,22 +12,20 @@
     align-items: center;
 }
 
-.app__menuitem-name {
-    flex: 1;
+.app__menuitem-sub {
+    width: 100%;
+    margin-top: 0.2rem;
 }
 
-.app__menuitem-sub {
-    width: 100px;
-   
-    background: var(--accent);
-    margin-top: 0.2rem;
+.app__menuitem-name {
+    flex: 1;
 }
 
 .app__menuitem-dash {
     width: 90px;
     height: 1px;
-    background: var(--accent);
-    margin:0 1rem;
+    background: var(--text);
+    margin: 0 1rem;
 }
 
 .app__menuitem-price {
@@ -34,4 +33,3 @@
     justify-content: flex-end;
     align-items: flex-end;
 }
-
