--- a/src/App.css
+++ b/src/App.css
@@ -39,17 +39,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  
+    border-radius: 5px; 
     margin-left: 2rem;
   }
   
   .app__wrapper_img-reverse {
     justify-content: flex-start;
     margin-right: 2rem;
+    border-radius: 10px; 
   }
   
   .app__wrapper_img img {
     width: 80%;
+    border-radius: 100px; 
   }
   
   .custom__button {
